Ardesia free digital sketchpad

---------------
 ardesia 1.1 
---------------


---------------
 ardesia 1.0 
---------------

Feautures
- Ubuntu 11.10 compliant
- Persist the background setting options
- Compliant with xfce desktop environment enabling the display compositing 
  xfwm tweak or using compiz or xcompmgr composite manager
- Compliant with kde desktop environment using kwin or compiz or xcompmgr 
  composite manager
- Pause the recording whenever necessary, and then resume when you want
- Update backgrounds images
- Add file permissions check for import/export functions 

Dependencies:
- Delete dependency from the libbfd
- Delete dependency from binutils
- Require gtk 2.16

Internationalization:
- Add the po/ardesia.pot translation template; you can use it 
  to add the support to a missing language with poedit and others tools
  (issue 27)

Usability
- keyboard accelerators
  - ctrl+q to quit
  - ctrl+z to undo
  - ctrl+y to redo

Bug Fix:
- Solved the issue 22: the libbfd dependecy has been removed.
- Solved the issue 30: configure strange behavior
- Solved the issue 31: Losing Window Focus in Win7
- Solved the issue 33: undo/redo implementation misbehaviour
- Fix the clear button in order to clear the screen immediately


---------------
 ardesia 0.9
---------------

Features
- The iwb file import/export feature has been enriched with
- Ubuntu 10.10/11.04 compliant

Dependencies:
- Delete the zip/unzip dependency
- Add a new requirement: the libgsf library


Bug Fix:
- Eraser: fix the eraser tool using the the back side of some
  wacom tablet pen

---------------
 ardesia 0.8
---------------

Usability
- New mouse tool; the lock/unlock button has been removed
- User interface revision; new tool and cursor icons

Features
- The iwb file import/export feature has been enriched with
  the background settings
- Add a new micro thickness for the tools
- Easy circle painting with the rounder tool